@@ -147,6 +147,9 @@ class User implements IDBAccessObject, UserIdentity {
 		'editmyuserjs',
 		'editmywatchlist',
 		'editsemiprotected',
+		'editsitecss',
+		'editsitejson',
+		'editsitejs',
 		'editusercss',
 		'edituserjson',
 		'edituserjs',
